...
                        />
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/name_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/name_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textSize="@dimen/edit_text_regular_size"
                            android:layout_marginBottom="@dimen/small_padding"
                            />
...
